Fix animations on safari

--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -176,7 +176,11 @@
     .portfolio-item {
         width: 100%;
         max-height: 300px;
+        min-height: 300px;
         height: auto;
     }
 
+    .portfolio-item:hover .item-overlay {
+        opacity: 0;
+    }
 }
